# cathay-afa3-tap

./: requirements.txt
agent/: Dockerfile  README.md  agent_a2a_server.py  agent_executor.py  pyproject.toml
agent/afa_agent/: README.md  agent.py
agent/afa_agent/script/: run.sh
agent/root_agent/: agent.py
local/: dfcx.ipynb  dfcx_test.py
mcp/: Dockerfile  README.md  mcp_server.py  pyproject.toml
mcp/script/: deploy.sh  run.sh
